--- a/src/app/utils/Nav.module.css
+++ b/src/app/utils/Nav.module.css
@@ -9,10 +9,15 @@
     top: 0;
     left: 0;
     z-index: 10000;
-    height: 65px;
+    height: 60px;
+}
+.im{
+    height: 35px;
+    margin-right: 2px;
 }
 .img{
     margin-right: 1rem;
+
     color: goldenrod;
     font-family: sans-serif;
 }
