--- a/client/src/app/utils/Nav.module.css
+++ b/client/src/app/utils/Nav.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 1rem;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     z-index: 10000;
