--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -6,6 +6,11 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  -ms-overflow-style: none;
+  scrollbar-width: none;   
+}
+:root ::-webkit-scrollbar{
+  display: none;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,6 +29,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+   
 }
 
 @layer utilities {
